# datesheet

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md
scripts/: build-and-push.sh  deploy.sh  download-tiny-font.sh
src/: main.rs
