[package]
name = "datesheet"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.66"
axum = "0.6.1"
http = "0.2.8"
printpdf = "0.5.3"
time = "0.3.17"
tokio = { version = "1.23.0", features = ["rt", "macros", "rt-multi-thread"] }
tower-http = { version = "0.3.5", features = ["trace"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["json"] }
